--- a/Web/Views/RolServicio/Details.cshtml
+++ b/Web/Views/RolServicio/Details.cshtml
@@ -166,7 +166,8 @@
 
     <script>
         function enlaceCancion(id) {
-            window.location.href = "../../Cancion/Details/" + id;
+            url = "../../Cancion/Details/" + id;
+            window.open(url, '_blank').focus();
         }
     </script>
 }
