--- a/Web/Views/Cancion/Create.cshtml
+++ b/Web/Views/Cancion/Create.cshtml
@@ -29,7 +29,7 @@
     <div class="card card-default mt-3">
         <div class="card-body p-3 col-md-12">
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-      
+
             <div class="row">
                 <div class="col-md-6">
                     <div class="form-group">
@@ -70,14 +70,7 @@
 
 
             <div class="row">
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <div class="custom-control custom-switch custom-switch-off-danger custom-switch-on-success">
-                            @Html.EditorFor(model => model.Estado, new { htmlAttributes = new { @class = "custom-control-input", id = "customSwitch3", @type = "checkbox" } })
-                            <label class="custom-control-label" for="customSwitch3">Estado</label>
-                        </div>
-                    </div>
-                </div>
+
                 <div class="col-md-6">
                     <div class="form-group">
                         @Html.LabelFor(model => model.Url_version, htmlAttributes: new { @class = "control-label" })
@@ -86,16 +79,22 @@
 
                     </div>
                 </div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <div class="custom-control custom-switch custom-switch-off-danger custom-switch-on-success">
+                            @Html.EditorFor(model => model.Estado, new { htmlAttributes = new { @class = "custom-control-input", id = "customSwitch3", @type = "checkbox" } })
+                            <label class="custom-control-label" for="customSwitch3">Estado</label>
+                        </div>
+                    </div>
+                </div>
             </div>
 
 
 
 
 
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Guardar" class="btn btn-success" />
-                </div>
+            <div class="modal-footer justify-content-end">
+                <button type="submit" class="btn btn-success">Guardar</button>
             </div>
 
         </div>
