--- a/Web/Views/Puesto/Edit.cshtml
+++ b/Web/Views/Puesto/Edit.cshtml
@@ -1,8 +1,6 @@
 ﻿@model Infraestructure.Models.Puesto
 
-@{
-    ViewBag.Title = "Edit";
-}
+@{ ViewBag.Title = "Edit"; }
 
 <!-- Content Header (Page header) -->
 <div class="content-header">
@@ -24,47 +22,54 @@
 
 @using (Html.BeginForm("Edit", "Puesto", FormMethod.Post))
 {
-    @Html.AntiForgeryToken()
+@Html.AntiForgeryToken()
 
-<div class="container">
-    <strong class="text-danger">Los campos marcados con * son obligatorios</strong>
-    <br />
-    <div class="row justify-content-md-center">
-        <div class="col-md-12">
-            <hr />
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            @Html.HiddenFor(model => model.Id)
-        </div>
-    </div>
+                <div class="container">
+                    <strong class="text-danger">Los campos marcados con * son obligatorios</strong>
+                    <br />
+                    <div class="row justify-content-md-center">
+                        <div class="col-md-12">
+                            <hr />
+                            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                            @Html.HiddenFor(model => model.Id)
+                        </div>
+                    </div>
 
-    <div class="form-group row">
-        <strong class="text-danger">*</strong>
-        @Html.LabelFor(model => model.IdCategoria, "IdCategoria", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-8">
-            @Html.DropDownList("IdCategoria", new SelectList(ViewBag.IdCategoria, "Id", "Descripcion"), htmlAttributes: new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.IdCategoria, "", new { @class = "text-danger" })
-        </div>
-    </div>
+                    <div class="form-group row">
+                        <strong class="text-danger">*</strong>
+                        @Html.LabelFor(model => model.IdCategoria, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-8">
+                            @Html.DropDownList("IdCategoria", new SelectList(ViewBag.IdCategoria, "Id", "Descripcion"), htmlAttributes: new { @class = "form-control" })
+                            @Html.ValidationMessageFor(model => model.IdCategoria, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
 
-    <div class="form-group row">
-        <strong class="text-danger">*</strong>
-        @Html.LabelFor(model => model.Descripcion, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-8">
-            @Html.EditorFor(model => model.Descripcion, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Descripcion, "", new { @class = "text-danger" })
-        </div>
-    </div>
+                    <div class="form-group row">
+                        <strong class="text-danger">*</strong>
+                        @Html.LabelFor(model => model.Descripcion, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-8">
+                            @Html.EditorFor(model => model.Descripcion, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Descripcion, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
 
 
 
-    <div class="form-group row" style="text-align:center">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Editar" class="btn btn-success" />
-        </div>
-    </div>
-</div>
-}
+                    <div class="form-group row" style="text-align:center">
+                        <div class="col-md-offset-2 col-md-10">
+                            <input type="submit" value="Editar" class="btn btn-success" />
+                        </div>
+                    </div>
+                </div>}
 
 <div>
     <a class="btn btn-warning" style="margin-bottom: 10px" href="@Url.Action("Index", "Puesto")" role="button"><i class="fas fa-arrow-alt-circle-up"></i>  Volver</a>
 </div>
+@section scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+    <script>//AQUI PARA PONER ACTIVO EL NAV-LINK, PONERSE EN CADA PAGINA
+        $(document).ready(function () {
+            $("#mantenimientos").addClass('active');
+            $("#menupuestos").addClass('active');
+        });</script>
+}
