--- a/Web/Views/RolServicio/Edit.cshtml
+++ b/Web/Views/RolServicio/Edit.cshtml
@@ -35,6 +35,9 @@
 
 
 <div class="card card-default mt-3">
+    <div class="card-header text-danger border-bottom-0">
+        <p>* Campos requeridos</p>
+    </div>
     <div class="card-body p-3">
         <div class="bs-stepper">
             <div class="bs-stepper-header modal-header" style="border-bottom:hidden" role="tablist" hidden>
@@ -79,6 +82,7 @@
                                     <div class="col-md-6">
                                         <input type="hidden" id="hdEventID" value="0" />
                                         <div class="form-group">
+                                            <strong class="text-danger">*</strong>
                                             <label>Título</label>
                                             <input type="text" id="txtSubject" class="form-control" name="titulo" />
                                             <!--
@@ -89,6 +93,7 @@
                                     <div class="col-md-6">
                                         <!-- Date -->
                                         <div class="form-group">
+                                            <strong class="text-danger">*</strong>
                                             <label>Fecha:</label>
                                             <div class="input-group date" id="fecha" data-target-input="nearest">
                                                 <input type="text" class="form-control datetimepicker-input" data-target="#fecha" id="txtStart" />
@@ -108,6 +113,7 @@
                                     <!-- HORA INICIO -->
                                     <div class="bootstrap-timepicker col-md-6">
                                         <div class="form-group">
+                                            <strong class="text-danger">*</strong>
                                             <label>Hora inicio:</label>
 
                                             <div class="input-group date" data-target-input="nearest">
@@ -123,6 +129,7 @@
                                     <!-- HORA FIN -->
                                     <div class="bootstrap-timepicker col-md-6">
                                         <div class="form-group">
+                                            <strong class="text-danger">*</strong>
                                             <label>Hora fin:</label>
 
                                             <div class="input-group date" data-target-input="nearest">
@@ -147,17 +154,16 @@
                                 <div class="row">
                                     <div class="col-md-12">
                                         <div class="form-group">
+                                            <strong class="text-danger">*</strong>
                                             <label>Canciones</label>
 
                                             @if (ViewBag.Canciones != null)
                                             {
-                                                @Html.DropDownList("canciones", new SelectList(ViewBag.Canciones, "Id", "Nombre"), new { @class = "canciones col-md-12", @multiple = "multiple" })
-                                            }
-                                            else
-                                            {
-                                                <br />
-                                                <span class="right badge badge-danger" id="alertaCancion" data-info="error">Aún no hay canciones.</span>
-                                            }
+                                @Html.DropDownList("canciones", new SelectList(ViewBag.Canciones, "Id", "Nombre"), new { @class = "canciones col-md-12", @multiple = "multiple" }) }
+                            else
+                            {
+                <br />
+                                <span class="right badge badge-danger" id="alertaCancion" data-info="error">Aún no hay canciones.</span>}
                                             <br />
 
                                         </div>
@@ -209,15 +215,15 @@
                                             foreach (var cat in categorias)
                                             {
 
-                                                <li class="nav-item"><a class="nav-link" href="#@cat.Id" onclick="mostrarPuestos(@cat.Id)" data-toggle="tab">@cat.Descripcion</a></li>
-                                            }
-                                        }
-                                        else
-                                        {
-                                            <li>
-                                                <span class="right badge badge-danger">Aún no hay categorías.</span>
-                                            </li>
-                                        }
+                            <li class="nav-item"><a class="nav-link" href="#@cat.Id" onclick="mostrarPuestos(@cat.Id)" data-toggle="tab">@cat.Descripcion</a></li>
+ }
+                    }
+                    else
+                    {
+        <li>
+            <span class="right badge badge-danger">Aún no hay categorías.</span>
+        </li>
+}
 
 
                                     </ul>
@@ -231,14 +237,13 @@
                                     @foreach (var item in puestos)
                                     {
                                         var idP = puestos;
-                                        <li id='puesto_@item.IdCategoria' hidden>
-                                            <label>@item.Descripcion</label>
-                                            @Html.DropDownList("usuarioId", new SelectList(ViewBag.Usuarios, "Id", "DisplayText"), new { @class = "col-md-6 form-control puestoId", @puesto = item.Id })
-                                            <input id="hiddenID" type="hidden" value="@item.Id" />
-                                            <br />
-                                        </li>
-
-                                    }
+                        <li id='puesto_@item.IdCategoria' hidden>
+                            <label>@item.Descripcion</label>
+                            @Html.DropDownList("usuarioId", new SelectList(ViewBag.Usuarios, "Id", "DisplayText"), new { @class = "col-md-6 form-control puestoId", @puesto = item.Id })
+                            <input id="hiddenID" type="hidden" value="@item.Id" />
+                            <br />
+                        </li>
+}
 
                                 </ul>
                             </div>
@@ -262,6 +267,7 @@
             </form>
         </div>
     </div>
+
 </div>
 
 
