--- a/Web/Views/Puesto/Edit.cshtml
+++ b/Web/Views/Puesto/Edit.cshtml
@@ -2,6 +2,8 @@
 
 @{ ViewBag.Title = "Edit"; }
 
+@{ string idValor = Convert.ToString(ViewBag.ElId);}
+
 <!-- Content Header (Page header) -->
 <div class="content-header">
     <div class="container-fluid">
@@ -39,7 +41,7 @@
                         <strong class="text-danger">*</strong>
                         @Html.LabelFor(model => model.IdCategoria, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-8">
-                            @Html.DropDownList("IdCategoria", new SelectList(ViewBag.IdCategoria, "Id", "Descripcion"), htmlAttributes: new { @class = "form-control" })
+                           @Html.DropDownList("idcategoria", new SelectList(ViewBag.IdCategoria, "Id", "Descripcion"), new { @class = "form-control" })
                             @Html.ValidationMessageFor(model => model.IdCategoria, "", new { @class = "text-danger" })
                         </div>
                     </div>
@@ -71,5 +73,8 @@
         $(document).ready(function () {
             $("#mantenimientos").addClass('active');
             $("#menupuestos").addClass('active');
+            $("#elCombo").ready(function () {
+                document.getElementById("elCombo").setAttribute()
+            });
         });</script>
 }
